docusign/1.1/modules/ROOT/pages/docusign-connector-studio.adoc
= Using Anypoint Studio to Configure DocuSign Connector 1.1 - Mule 4

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files.

To add and configure a connector in Studio:

. <<create-mule-project,Create a Mule project>>.
. <<add-connector-to-project,Add the connector to your Mule project>>.
. <<configure-input-source,Configure a source for the connector's flow>>.
. <<add-connector-operation,Add a connector operation to the flow>>.
. <<configure-global-element,Configure a global element for the connector>>.
. <<configure-other-fields,Configure the other connector fields>>.

When you run the connector, you can view the app log to check for problems in real time, as described in <<view-app-log,View the App Log>>.

If you are new to configuring connectors in Studio, see xref:connectors::introduction/intro-config-use-studio.adoc[Using Anypoint Studio to Configure a Connector]. If, after reading this topic, you need additional information about the connector fields, refer to the xref:docusign-connector-reference.adoc[DocuSign Connector Reference].

[[create-mule-project]]
== Create a Mule Project

In Studio, create a new Mule project in which to add and configure the connector:

. In Studio, select *File > New > Mule Project*.
. Enter a name for your Mule project and click *Finish*.

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

Add Anypoint Connector for DocuSign (DocuSign Connector) to your Mule project to automatically populate the XML code with the connector's namespace and schema location and add the required dependencies to the project's `pom.xml` file:

. In the *Mule Palette* view, click *(X) Search in Exchange*.
. In the *Add Dependencies to Project* window, type `docusign` in the search field.
. Click *DocuSign Connector* in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.

[[configure-input-source]]
== Configure a Source

A source initiates a flow when a specified condition is met.
You can configure one of these sources to use with DocuSign Connector:

* HTTP Listener +
Initiates a flow each time it receives a request on the configured host and port
* Scheduler +
Initiates a flow when a time-based condition is met

For example, to configure an HTTP Listener source, follow these steps:

. In the *Mule Palette* view, select *HTTP > Listener*.
. Drag *Listener* to the Studio canvas.
. On the *Listener* configuration screen, optionally change the value of the *Display Name* field.
. Specify a value for the *Path* field.
. Click the plus sign (*+*) next to the *Connector configuration* field to configure a global element that can be used by all instances of the HTTP Listener source in the app.
. On the *General* tab, specify the connection information for the connector.
. On the *TLS* tab, optionally specify the TLS information for the connector.
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[add-connector-operation]]
== Add a Connector Operation to the Flow

When you add a connector operation to your flow, you are specifying an action for that connector to perform.

To add an operation for DocuSign Connector, follow these steps:

. In the *Mule Palette* view, select *DocuSign* and then select the desired operation.
. Drag the operation onto the Studio canvas to the right of the source.

[[configure-global-element]]
== Configure a Global Element for the Connector

When you configure a connector, configure a global element that all instances of that connector in the app can use. Configuring a global element requires you to provide the authentication credentials that the connector requires to access the target DocuSign system. DocuSign Connector supports Authorization Connection Provider (Implicit Grant) authentication and OAuth Connection Provider (Authorization Code Grant) authentication.

To configure the global element for DocuSign Connector, follow these steps:

. Select the operation in the Studio canvas.
. In the configuration screen for the operation, click the plus sign (*+*) next to the *Connector configuration* field to access the global element configuration fields.
. On the *General* tab, in *Connection*, select the authentication method to configure:

* <<auth-connection, Authorization Connection Provider (Implicit Grant)>>
* <<jwt-connection, JWT Connection Provider (JWT Grant)>>
* <<oauth-connection, OAuth Connection Provider (Authorization Code Grant)>>

+
You can reference a configuration file that contains ANT-style property placeholders (recommended), or you can enter your authorization credentials in the global configuration properties. For information about the benefits of using property placeholders and how to configure them, refer to xref:connectors::introduction/intro-connector-configuration-overview.adoc[Anypoint Connector Configuration].
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.


[[auth-connection]]
=== Authorization Connection Provider (Implicit Grant)

. Enter the following information on the *General* tab of the *Global Element Properties* screen to configure Authorization Connection Provider (Implicit Grant):

+
[%header,cols="30s,70a"]
|===
|Field |User Action
|Name | Configuration name.
|Base Uri | Parameter base URI for each instance or tenant.
|Authorization | Authorization for the connection type.
|===
+

+
The following screenshot shows an example of configuring the *General* tab for Authorization Connection Provider (Implicit Grant):
+

+
image::auth-general-tab.png["General tab for Authorization Connection Provider Implicit Grant authentication"]
+

. On the *Advanced* tab, optionally change the default values of the *Response timeout*, *Response timeout unit*, *Streaming type*, and *Expiration policy* fields.

+
The following screenshot shows an example of configuring the *Advanced* tab for Authorization Connection Provider (Implicit Grant):
+

+
image::auth-advanced-tab.png["Advanced tab for Authorization Connection Provider Implicit Grant authentication"]

[[jwt-connection]]
=== JWT Connection Provider (JWT Grant)

Use JWT Grant for server-to-server or machine-to-machine communication for authentication without user involvement. The client authenticates using a signed JWT, which the authorization server or resource server verifies.

Enter the following information on the *General* tab of the *Global Element Properties* screen to configure JWT Connection Provider (JWT Grant):

[%header,cols="30s,70a"]
|===
|Field |User Action
| Base Uri  | Parameter base URI for each instance or tenant. In the DocuSign app, go to *Settings > Apps and Keys > My Account Information* to find the account base URI and then add `/restapi` to the end, for example, `\https://demo.docusign.net/restapi`.
| Integration Key  |  Integration key that identifies the integration and links to its configuration values with the service provider.
| Impersonated user id  |  The user ID is a unique identifier associated with the user in the DocuSign system. 
| Requested Scopes |  A space-delimited list of the scopes the app needs. For JWT Grant, this must include the `impersonation` scope. 
| Private Key |  The RSA private key.
|===

This screenshot shows an example of configuring the *General* tab for JWT Connection Provider (JWT Grant):

image::jwt-general-tab.png["General tab for JWT Grant authentication"]


[[oauth-connection]]
=== OAuth Connection Provider (Authorization Code Grant)

include::connectors::partial$oauth2-description.adoc[]

. Enter the following information on the *General* tab of the *Global Element Properties* screen to configure OAuth Connection Provider (Authorization Code Grant):

+
[%header,cols="30s,70a"]
|===
|Field |User Action
|Name | Configuration name.
|Consumer key | OAuth consumer key as registered with the service provider.
|Consumer secret | OAuth consumer secret as registered with the service provider.
|Listener config | HTTP configuration used to create the listener that receives the access token callback endpoint.
|Callback path | Path of the access token callback endpoint.
|Authorize path | Path of the local HTTP endpoint that triggers the OAuth dance.
|===
+

+
The following screenshot shows an example of configuring the *General* tab for OAuth Connection Provider (Authorization Code Grant):
+

+
image::oauth-general-tab.png["General tab for OAuth Connection Provider Authorization Code Grant authentication"]
+

. On the *Advanced* tab, optionally change the default values of the *Response timeout*, *Response timeout unit*, *Streaming type*, and *Expiration policy* fields.

+
The following screenshot shows an example of configuring the *Advanced* tab for OAuth Connection Provider (Authorization Code Grant):
+

+
image::oauth-advanced-tab.png["Advanced tab for OAuth Connection Provider Authorization Code Grant authentication"]


[[configure-other-fields]]
== Configure Additional Connector Fields

After you configure a global element for DocuSign Connector, configure the other required fields for the connector. The required fields vary depending on which connector operation you use.

[[view-app-log]]
== View the App Log

To check for problems, you can view the app log as follows:

* If you’re running the app from Anypoint Platform, the app log output is visible in the Anypoint Studio console window.
* If you’re running the app using Mule from the command line, the app log output is visible in your OS console.

Unless the log file path is customized in the app’s log file (`log4j2.xml`), you can also view the app log in the default location `MULE_HOME/logs/<app-name>.log`.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-config-use-studio.adoc[Using Anypoint Studio to Configure a Connector]
* xref:docusign-connector-reference.adoc[DocuSign Connector Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
